// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should render component correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    15
     
    expenses
     totaling 
    $85,005.53
  </h1>
</div>
`;
